force-app/main/default/objects/NEPA_Plaintiff_Profile__mdt.object
<CustomObject>
    <description>Known repeat-plaintiff organizations in federal NEPA litigation, seeded from PermitTEC v0.1 case analysis. Used by NEPA_Plaintiff_Intelligence Flow to flag IndividualApplication records when a high-risk commenter submits a PublicComplaint. Drives nepa_plaintiff_risk_flag__c and Litigation Risk Score bonus.</description>
    <label>NEPA Plaintiff Profile</label>
    <pluralLabel>NEPA Plaintiff Profiles</pluralLabel>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <description>Exact organization name matched against PublicComplaint.nepa_organization__c. Case-insensitive CONTAINS match is performed in the Flow.</description>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Keywords__c</fullName>
        <description>Semicolon-delimited keywords from the organization name for fuzzy matching (e.g., "WildEarth; Guardians"). Flow performs CONTAINS check on each keyword against the commenter organization field.</description>
        <label>Name Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Tier__c</fullName>
        <description>Litigation risk tier for this organization. VERY_HIGH/HIGH organizations trigger nepa_plaintiff_risk_flag__c and a Legal Defensibility Review task. LOW/MEDIUM do not trigger flag but are logged.</description>
        <label>Risk Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>VERY_HIGH</fullName><default>false</default><label>Very High</label></value>
                <value><fullName>HIGH</fullName><default>false</default><label>High</label></value>
                <value><fullName>MEDIUM</fullName><default>false</default><label>Medium</label></value>
                <value><fullName>LOW</fullName><default>false</default><label>Low</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Case_Count__c</fullName>
        <description>Number of prior NEPA litigation cases filed by this organization in the PermitTEC corpus.</description>
        <label>Prior Case Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Success_Rate__c</fullName>
        <description>Fraction of prior cases in which this plaintiff obtained a favorable ruling (0.00–1.00). Displayed in the Legal Defensibility Review task description.</description>
        <label>Success Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Typical_Causes__c</fullName>
        <description>Semicolon-delimited list of typical NEPA challenge grounds this organization has used (e.g., Cumulative impacts; ESA Section 7). Included in task description for legal review.</description>
        <label>Typical Causes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>When false, this profile is excluded from Plaintiff Intelligence matching.</description>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>